# mamadvpn

./: Cargo.toml  README.md  STATUS.md  build.rs  config.json  main.py
.github/workflows/: build-apk.yml  build.yml
api/: Cargo.toml
api/src/: lib.rs
app/: README.md  pubspec.yaml
app/android/app/: build.gradle  proguard-rules.pro
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/mamadvpn/mamadvpn/: MainActivity.kt
app/android/app/src/main/kotlin/com/mamadvpn/mamadvpn/vpn/: VpnService.kt
app/android/app/src/main/res/xml/: network_security_config.xml
app/assets/: config.json
app/lib/: main.dart
app/lib/ffi/: native_bridge.dart
app/lib/models/: app_state.dart
app/lib/screens/: config_screen.dart  dashboard_screen.dart  logs_screen.dart
app/lib/services/: app_service.dart
app/lib/widgets/: stats_card.dart
common/: Cargo.toml
common/src/: config.rs  connection_id.rs  error.rs  lib.rs  packet.rs  tls.rs
core/: Cargo.toml
core/src/: bypass.rs  connection.rs  engine.rs  interceptor.rs  lib.rs  raw.rs  relay.rs  state.rs  trojan.rs
core/src/bypass/implementations/: wrong_seq.rs
core/src/tls/: connector.rs  custom.rs  mod.rs
examples/: Cargo.toml
examples/src/: demo_config.rs  standalone.rs
scripts/: build-android.sh
src/: api.rs  injector.rs  main.rs  xray.rs
tests/: Cargo.toml
tests/src/: lib.rs
