[package]
name = "mamad_vpn"
version = "1.0.0"
edition = "2021"
description = "High-performance Windows DPI circumvention tool using kernel-level TCP sequence number manipulation"
authors = ["mobjak"]
license = "MIT"

[[bin]]
name = "mamad_vpn"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
windivert = "0.7.0-beta.4"
windivert-sys = "0.11.0-beta.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dialoguer = "0.11"
anyhow = "1"
dashmap = "6"
rand = "0.8"
hex = "0.4"
once_cell = "1"
ctrlc = "3"
dirs = "5"
base64 = "0.22"

[build-dependencies]
embed-resource = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Foundation",
] }
