[package]
name = "mamadvpn-common"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, packet definitions, TLS templates, and configuration for MamadVPN"

[dependencies]
bytes.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
hex.workspace = true
parking_lot.workspace = true
