[package]
name = "mamadvpn-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Integration and unit tests for MamadVPN"

[dependencies]
mamadvpn-core = { path = "../core" }
mamadvpn-common = { path = "../common" }

tokio.workspace = true
bytes.workspace = true
anyhow.workspace = true
tracing.workspace = true
